# google-play-scraper

./: README.md  app.py  pyproject.toml
examples/: analyze_app_reviews.py  debug_app_info.py  review_classifier.py  scrape_all_reviews.py  scrape_reviews.py  scrape_reviews_to_csv.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: main.tsx
frontend/src/api/: index.ts
frontend/src/components/analysis/: AnalysisProgress.tsx
frontend/src/components/pricing/: PricingFeature.tsx  PricingModal.tsx
frontend/src/components/results/: FeedbackItem.tsx  FeedbackSection.tsx  KpiCard.tsx  ResultsDashboard.tsx  ResultsSidebar.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  ProgressBar.tsx
frontend/src/context/: AnalysisContext.tsx
frontend/src/types/: index.ts
frontend/src/utils/: tips.ts
google-play-scraper/: .gitignore  api_costs.json  app.py  cost_tracker.py  requirements.txt
google-play-scraper/examples/: review_classifier.py
google-play-scraper/frontend/: package-lock.json
google-play-scraper/frontend/src/: App.tsx
google-play-scraper/frontend/src/api/: index.ts
google-play-scraper/frontend/src/components/landing/: Hero.tsx
google-play-scraper/frontend/src/components/layout/: Navbar.tsx
google-play-scraper/frontend/src/components/results/: CategoryChip.tsx  FeedbackSection.tsx  KpiStrip.tsx  ReviewList.tsx  (+2 more)
google-play-scraper/frontend/src/context/: AnalysisContext.tsx
google-play-scraper/frontend/src/hooks/: useReviews.ts  useReviewsCache.ts
google-play-scraper/frontend/src/types/: index.ts
(+4 files in other folders)
