[tool.poetry]
name = "gplay-review-analyzer"
version = "0.1.0"
description = "A tool to analyze Google Play Store reviews"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pydantic = "^2.6.0"
openai = "^1.0.0"
python-dotenv = "^1.0.0"
google-play-scraper = "^1.2.4"
pandas = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
isort = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
